--- a/package.json
+++ b/package.json
@@ -11,11 +11,15 @@
   },
   "dependencies": {
     "@emailjs/browser": "^3.11.0",
+    "@fortawesome/fontawesome-free": "^6.4.2",
+    "@fortawesome/free-solid-svg-icons": "^6.4.2",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "aos": "^3.0.0-beta.6",
     "axios": "^1.6.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
+    "react-snowfall": "^1.2.1",
     "styled-components": "^6.0.5"
   },
   "devDependencies": {
